--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "dev": "tsx watch src/index.ts",
         "start": "node .",
         "build": "tsup src/index.ts --minify"
-    },      
+    },
     "keywords": [],
     "author": "",
     "license": "ISC",
@@ -14,6 +14,8 @@
     "description": "",
     "dependencies": {
         "@discordjs/voice": "^0.18.0",
+        "@types/better-sqlite3": "^7.6.12",
+        "better-sqlite3": "^11.7.2",
         "discord.js": "^14.17.2"
     },
     "devDependencies": {
